examples/policies/kubernetes/clusterwide/clusterscope-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
description: "Policy for selective ingress allow to a pod from only a pod with given label"
metadata:
  name: "clusterwide-policy-example"
spec:
  endpointSelector:
    matchLabels:
      name: leia
  ingress:
  - fromEndpoints:
    - matchLabels:
        name: luke
